fix: add overflow properties to profile job

--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -2,6 +2,9 @@
   margin: 0;
   font-size: 18px;
   line-height: 1.22;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 660px) {
